-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206829 | 12 | Nils Eliasson | P1 | Resolved | Fixed | team |
| JDK-8206606 | 11.0.1 | Nils Eliasson | P1 | Resolved | Fixed | b01 |
We had odd hangup in our SPECjvm tests with current jdk/jdk. Compiler.sunflow seems to be reliably hanging with 100% CPU active in compiled code. Bisection says it started with JDK-8192992.
Hangup seems to happen reliably with -Xmx16g -Xms16g -XX:+AlwaysPreTouch -XX:-TieredCompilation -XX:+DisableExplicitGC -XX:-UseBiasedLocking -XX:+UseParallelGC -Xlog:gc. There are no asserts in fastdebug build.
Hangup seems to happen reliably with -Xmx16g -Xms16g -XX:+AlwaysPreTouch -XX:-TieredCompilation -XX:+DisableExplicitGC -XX:-UseBiasedLocking -XX:+UseParallelGC -Xlog:gc. There are no asserts in fastdebug build.
- backported by
-
JDK-8206606 Compiler.sunflow hangs after JDK-8192992
-
- Resolved
-
-
JDK-8206829 Compiler.sunflow hangs after JDK-8192992
-
- Resolved
-
- relates to
-
JDK-8192992 Test8007294.java failed: attempted to spill a non-spillable item
-
- Resolved
-
-
JDK-8205999 C2 compilation fails with "assert(store->find_edge(load) != -1) failed: missing precedence edge"
-
- Closed
-