8204157: Compiler.sunflow hangs after JDK-8192992

Treat non-loop phis as stores

Reviewed-by: thartmann